src/styles/detail-view-tile.scss
.detail-view-tile {
  position: relative;
  --horizontalPadding: 1.5rem;
  width: 100%;
  border: 1px solid var(--border);
  border-radius: 0.75rem;
  box-sizing: border-box;
  margin: 1rem 0;

  &.collapsed {
    margin-bottom: 0;

    header {
      border: none;
    }
  }

  h1 {
    font-weight: normal;
    color: inherit;
  }

  h3 {
    margin: 0.5rem 0;
  }

  header {
    border-bottom: 1px solid var(--border);
    padding: 0.5rem var(--horizontalPadding);
    box-sizing: border-box;
    min-height: 5rem;
    overflow: hidden;
    display: flex;
    align-items: center;

    .subheader {
      &.left {
        min-width: 61%;
      }

      &.right {
        p {
          display: flex;
          font-size: 1em;
          font-weight: 600;
          align-items: center;
        }

        .tag {
          margin-left: 0.75rem;
          margin-bottom: 0.125rem;
        }
      }
    }

    h1,
    h3 {
      margin: 0 !important;
    }
  }

  .lower-half {
    margin: 1rem 0;

    h3 {
      margin: 0 var(--horizontalPadding) 0.5rem;
    }
  }

  .bus-route {
    margin-left: calc(var(--row-height) / -2);
  }
}

